@@ -1089,6 +1089,10 @@ EPSON Stylus CX-3100
 EPSON Stylus CX-3200
 EPSON Stylus CX-5100
 EPSON Stylus CX-5200
+EPSON Stylus CX-6300
+EPSON Stylus CX-6400
+EPSON Stylus CX-8300
+EPSON Stylus CX-8400
 EPSON CL-700
 EPSON CL-750
 EPSON CL-760	(Experimental)
@@ -1398,6 +1402,10 @@ Epson Stylus CX3100            escp2-cx3100    EPSON Stylus CX-3100
 Epson Stylus CX3200            escp2-cx3200    EPSON Stylus CX-3200
 Epson Stylus CX5100            escp2-cx5100    EPSON Stylus CX-5100
 Epson Stylus CX5200            escp2-cx5200    EPSON Stylus CX-5200
+Epson Stylus CX6300            escp2-cx6300    EPSON Stylus CX-6300
+Epson Stylus CX6400            escp2-cx6400    EPSON Stylus CX-6400
+Epson Stylus CX8300            escp2-cx8300    EPSON Stylus CX-8300
+Epson Stylus CX8400            escp2-cx8400    EPSON Stylus CX-8400
 Epson CL-700                   escp2-cl700     EPSON CL-700
 Epson CL-750                   escp2-cl750     EPSON CL-750
 Epson CL-760                   escp2-cl760     EPSON CL-760
@@ -1890,3 +1898,7 @@ Printer-Specific Notes:
       EPSON Stylus CX-3200
       EPSON Stylus CX-5100
       EPSON Stylus CX-5200
+      EPSON Stylus CX-6300
+      EPSON Stylus CX-6400
+      EPSON Stylus CX-8300
+      EPSON Stylus CX-8400
